[package]
name = "exam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3"
actix-identity = "0.3"
actix-rt = "2.0"
dotenv = "0.15"
dotenv_codegen = "0.15"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4.7", features = ["postgres", "r2d2", "chrono", "uuidv07"] }
json = "0.12"
serde_json = "1.0"
lazy_static = "1.4"
uuid = { version = "=0.8", features = ["serde", "v4"] }
paperclip = { version = "0.5.0", features = ["actix-nightly", "uuid", "chrono"] }
tracing-subscriber = "0.2"

yugabyte = { version = "0.1.0", path = "yugabyte" }

[workspace]
members =["yugabyte"]